fix: initial flickering of html opacity

--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -79,3 +79,6 @@ a {
 .wf-loading {
   opacity: 0;
 }
+.wf-active, .wf-inactive {
+  opacity: 1;
+}
