--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,4 +1,5 @@
 html {
+  opacity: 0;
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
